stopped scrollbars

--- a/style/index.css
+++ b/style/index.css
@@ -144,7 +144,10 @@ footer a:hover {
 #doninfo {
 	text-align:center;
 	margin-top:-1rem;
-	overflow: scroll;
+}
+
+#bitAdr {
+	font-family: monospace;
 }
 
 .spinner {
